# focaccia

./: .gitignore  .rubocop.yml  CONTRIBUTING.md  Cargo.toml  README.md  Rakefile  crates.js  deny.toml  help.html  package-lock.json  package.json  search-index.js  settings.html  source-files.js  src-files.js
.config/: artichoke.dic
.github/: labels.json  labels.yaml
.github/workflows/: audit.yaml  ci.yaml  code-coverage.yaml
focaccia/: all.html  enum.CaseFold.html  fn.ascii_case_eq.html  fn.ascii_casecmp.html  fn.unicode_full_case_eq.html  fn.unicode_full_casecmp.html  fn.unicode_full_turkic_case_eq.html  fn.unicode_full_turkic_casecmp.html  index.html  sidebar-items.js  struct.NoSuchCaseFoldingScheme.html
focaccia/folding/ascii/: fn.casecmp.html  fn.eq.html
focaccia/folding/full/: fn.casecmp.html  fn.eq.html
focaccia/folding/turkic/: fn.casecmp.html  fn.eq.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.TryFrom.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
scripts/: full_ranges.rb  gen_case_lookups.rb  gen_full_mapping.rb  gen_full_turkic_mapping.rb
src/: lib.rs
src/exhaustive/: full.rs  mod.rs  turkic.rs
src/focaccia/: lib.rs.html
src/focaccia/folding/: ascii.rs.html  full.rs.html  mod.rs.html  turkic.rs.html
src/focaccia/folding/mapping/: full.rs.html  lookup.rs.html  mod.rs.html  turkic.rs.html
src/folding/: ascii.rs  full.rs  mod.rs  turkic.rs
src/folding/mapping/: full.rs  lookup.rs  mod.rs  turkic.rs
tests/: full_fold_exhaustive.rs  full_turkic_fold_exhaustive.rs
tests/integration/: .main.rs.un~  full_fold_exhaustive.rs  full_turkic_fold_exhaustive.rs  main.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
trait.impl/core/convert/: trait.TryFrom.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
