[package]
name = "focaccia"
version = "1.0.2" # remember to set `html_root_url` in `src/lib.rs`.
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/artichoke/focaccia"
documentation = "https://docs.rs/focaccia"
homepage = "https://github.com/artichoke/focaccia"
description = "no_std implementation of Unicode case folding comparisons"
keywords = ["case-folding", "case-insensitive", "case", "no_std", "unicode"]
categories = ["internationalization", "no-std", "text-processing"]
include = ["src/**/*", "tests/**/*", "CaseFolding.txt", "LICENSE", "README.md"]

[features]
default = ["std"]
# Enable a dependency on the Rust `std` library. This feature implements the
# `Error` trait on error structs in `focaccia`.
std = []

[dependencies]

[dev-dependencies]
# Check that crate versions are properly updated in documentation and code when
# bumping the version.
version-sync = "0.9, >= 0.9.2"
