[package]
name = "focaccia"
version = "1.2.0" # remember to set `html_root_url` in `src/lib.rs`.
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
license = "MIT AND Unicode-DFS-2016"
edition = "2018"
readme = "README.md"
repository = "https://github.com/artichoke/focaccia"
documentation = "https://docs.rs/focaccia"
homepage = "https://github.com/artichoke/focaccia"
description = "no_std implementation of Unicode case folding comparisons"
keywords = ["case-folding", "case-insensitive", "case", "no_std", "unicode"]
categories = ["internationalization", "no-std", "text-processing"]
include = ["src/**/*", "tests/**/*", "CaseFolding.txt", "LICENSE", "LICENSE-UNICODE", "README.md"]

[features]
default = ["std"]
# Enable a dependency on the Rust `std` library. This feature implements the
# `Error` trait on error structs in `focaccia`.
std = []

[dependencies]

[dev-dependencies]

# Check that crate versions are properly updated in documentation and code when
# bumping the version.
[dev-dependencies.version-sync]
version = "0.9.3"
default-features = false
features = ["markdown_deps_updated", "html_root_url_updated"]

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu` and only builds
# that target. `focaccia` has the same API and code on all targets.
default-target = "x86_64-unknown-linux-gnu"
targets = []
rustdoc-args = ["--cfg", "docsrs"]
